--- a/scss/_objects.scss
+++ b/scss/_objects.scss
@@ -11,11 +11,12 @@
 
 
 
-@mixin card($width) {
+@mixin card($width, $height) {
 	width: $width;
-	height: 300px;
-	background: red;
+	height: $height;
+	background: $gray;
 	display: block;
+	margin-bottom: 3vh;
 }
 
 @mixin not-first-card($margin) {
@@ -24,12 +25,18 @@
 
 // Story Cards
 .story-card-location {
+	margin-top: 5vh;
 	display: flex;
+	flex-wrap: wrap;
 	margin-bottom: 50px;
 	.story-card {
-		@include card(48%); 
+		@include card(48%, 300px); 
 		&:nth-of-type(2n) {
 			@include not-first-card(4%);
+		}
+		.story-title {
+			text-align: center;
+
 		}
 	}
 }
