--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -3,7 +3,8 @@
 }
 #page-content {
 	margin-top: 6vh;
-	margin-left: 13vw;
+	margin-left: 15vw;
+	overflow: hidden;
 }
 
 // header image
